<resources>
    <string name="app_name">Consiglia Viaggi 19</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_structure">StructureActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>







    <string name="nome_struttura">Struttura</string>
    <string name="nome_luogo">Luogo</string>
    <string name="distanza_seekbar">Distanza : 1</string>
    <string name="tipo_struttura">Tipo Struttura</string>
    <string name="visualizza">Visualizza</string>

    <string name="popup_permessiGPS_titolo">ATTENZIONE!</string>
    <string name="popup_permessiGPS_messaggio">GPS disabilitato, desideri attivarlo?</string>

    <string name="bottone_conferma">Conferma</string>
    <string name="bottone_annulla">Annulla</string>

    <string name="map_key" translatable="false">AIzaSyAtw3p3bEk0oZQnRf6Kh3_6_lQAC6MmE-E</string>
</resources>